unpackaged/main/default/objects/Fire_Marshal_Permits__c/Fire_Marshal_Permits__c.object-meta.xml
<CustomObject>
    <description>Part of the GES Connect - Connect2 Show to track fire marshal permits.</description>
    <label>Fire Marshal Permit</label>
    <nameField>
        <displayFormat>FMP-{0000}</displayFormat>
        <label>Fire Marshal Permit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fire Marshal Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>