unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/By_Fire_Inspector__c.field-meta.xml
<CustomField>
    <fullName>By_Fire_Inspector__c</fullName>
    <label>By Fire Inspector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>