unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Connect2_Show__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Connect2 Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipLabel>Fire Marshal Permits</relationshipLabel>
    <relationshipName>Fire_Marshal_Permits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>