unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/FM_Approved_Packet_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>FM_Approved_Packet_Sent_Date__c</fullName>
    <label>FM Approved Packet Sent Date</label>
    <type>Date</type>
</CustomField>