unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Inspection_Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Reminder_Sent_Date__c</fullName>
    <label>Inspection Reminder Sent Date</label>
    <type>Date</type>
</CustomField>