unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <formula>Connect2_Show__r.Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Number</label>
    <type>Text</type>
</CustomField>