unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>Connect2_Show__r.Opportunity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>