unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Ordered_By__c.field-meta.xml
<CustomField>
    <fullName>Ordered_By__c</fullName>
    <label>Ordered By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>