unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Show_ID__c</fullName>
    <formula>Connect2_Show__r.Show_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show ID</label>
    <type>Text</type>
</CustomField>