unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <formula>Connect2_Show__r.Show_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Name</label>
    <type>Text</type>
</CustomField>