unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Show_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Start_Date__c</fullName>
    <formula>Connect2_Show__r.Show_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Start Date</label>
    <type>Date</type>
</CustomField>