unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Submittal_By__c.field-meta.xml
<CustomField>
    <fullName>Submittal_By__c</fullName>
    <label>Submittal By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Benika</fullName>
            </value>
            <value>
                <fullName>Cary</fullName>
            </value>
            <value>
                <fullName>David</fullName>
            </value>
            <value>
                <fullName>Genesis</fullName>
            </value>
            <value>
                <fullName>George</fullName>
            </value>
            <value>
                <fullName>Irene</fullName>
            </value>
            <value>
                <fullName>Jason</fullName>
            </value>
            <value>
                <fullName>Jean</fullName>
            </value>
            <value>
                <fullName>Jim</fullName>
            </value>
            <value>
                <fullName>Joe</fullName>
            </value>
            <value>
                <fullName>Lana</fullName>
            </value>
            <value>
                <fullName>Lisa</fullName>
            </value>
            <value>
                <fullName>Ojay</fullName>
            </value>
            <value>
                <fullName>Sergio</fullName>
            </value>
            <value>
                <fullName>Troy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>