unpackaged/main/default/objects/Fire_Marshal_Permits__c/fields/Submitted_to_FM_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_FM_Date__c</fullName>
    <label>Submitted to FM Date</label>
    <type>Date</type>
</CustomField>