unpackaged/main/default/objects/Fire_Marshal_Permits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Show_Start_Date__c</columns>
    <columns>Job_Number__c</columns>
    <columns>Permit_Status__c</columns>
    <columns>Appilcation_Permit__c</columns>
    <columns>Permit_Type__c</columns>
    <columns>Submittal_By__c</columns>
    <columns>Submitted_to_FM_Date__c</columns>
    <columns>Approved_Rejected_Date__c</columns>
    <columns>Inspection_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>