unpackaged/main/default/objects/Fire_Marshal_Permits__c/listViews/X1_Pending_Permits.listView-meta.xml
<ListView>
    <fullName>X1_Pending_Permits</fullName>
    <columns>NAME</columns>
    <columns>Job_Number__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Permit_Status__c</columns>
    <columns>Approved_Rejected_Date__c</columns>
    <columns>Permit_Signed_Date__c</columns>
    <columns>Permit_Type__c</columns>
    <columns>Submittal_By__c</columns>
    <columns>Submitted_to_FM_Date__c</columns>
    <columns>By_Fire_Inspector__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permit_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>(1) Pending Permits</label>
    <language>en_US</language>
</ListView>