unpackaged/main/default/objects/Fire_Marshal_Permits__c/listViews/X6_Next_Month.listView-meta.xml
<ListView>
    <fullName>X6_Next_Month</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Job_Number__c</columns>
    <columns>Appilcation_Permit__c</columns>
    <columns>Permit_Status__c</columns>
    <columns>Permit_Type__c</columns>
    <columns>Submittal_By__c</columns>
    <columns>Submitted_to_FM_Date__c</columns>
    <columns>Approved_Rejected_Date__c</columns>
    <columns>Inspection_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submitted_to_FM_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>(7) Next Month</label>
    <language>en_US</language>
</ListView>